---
source: facet-derive-emit/tests/codegen/mod.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        #[facet(rename_all = \"snake_case\")]\n        struct SnakeCaseExample {\n            field_one: String,\n            field_two: String,\n        }\n        \"#)"
---
#[used]
static SNAKE_CASE_EXAMPLE_SHAPE: &'static ::facet::Shape =
    <SnakeCaseExample as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for SnakeCaseExample {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [
                ::facet::Field::builder()
                    .name("field_one")
                    .shape(|| ::facet::shape_of(&|s: &SnakeCaseExample| &s.field_one))
                    .offset(::core::mem::offset_of!(SnakeCaseExample, field_one))
                    .build(),
                ::facet::Field::builder()
                    .name("field_two")
                    .shape(|| ::facet::shape_of(&|s: &SnakeCaseExample| &s.field_two))
                    .offset(::core::mem::offset_of!(SnakeCaseExample, field_two))
                    .build(),
            ]
        };
        let vtable = &const {
            let mut vtable = ::facet::value_vtable!(
                Self,
                |f, _opts| ::core::fmt::Write::write_str(f, "SnakeCaseExample")
            );
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::StructDef::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
